@@ -270,10 +270,9 @@
                 border: 2px outset #colours[button-border];
                 border-radius: 50px; color: #colours[link];
                 cursor: pointer; display: inline-block;
-                line-height: 0.8rem; overflow: hidden;
+                line-height: 0.8rem; margin-right: 0.25rem; overflow: hidden;
                 padding: 0.25rem 0.75rem; position: relative;
-                text-decoration: none;
-                transition: border 500ms, color 500ms;
+                text-decoration: none; transition: border 500ms, color 500ms;
                 span {
                     font-family: #fonts[system];
                     font-size: 0.7rem; letter-spacing: 0.1rem;
